# duplicate_finder

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  MANUAL.md  README.md  dup_web.py  duplicate_finder.py  requirements.txt  results.md
dup_web_py/: dup_web.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.mac.conf.json  tauri.win.conf.json
src-tauri/.cargo/: config.toml
src-tauri/crates/dup-scanner/: Cargo.toml
src-tauri/crates/dup-scanner/src/: archive.rs  cache.rs  collector.rs  filter.rs  hash.rs  lib.rs  model.rs  phash.rs  vhash.rs
src-tauri/crates/dup-server/: Cargo.toml
src-tauri/crates/dup-server/src/: lib.rs  main.rs  state.rs
src-tauri/crates/dup-server/src/api/: csv.rs  files.rs  misc.rs  mod.rs  scan.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/wry-patch/src/wkwebview/: mod.rs
static/: app.js  diff-view.js  index.html  preset.js  progress.js  scan-path.js  stats.js  style.css
