[package]
name = "dup-scanner"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
zip = { workspace = true }
sevenz-rust = { workspace = true }
ffmpeg-next = { version = "8" }

[dev-dependencies]
tempfile = "3"
